j--/tests/pass/Division.java
package pass;

/**
 * This class was made during: Lecture 1
 * 
 * @see https://learn.inside.dtu.dk/d2l/le/content/103833/viewContent/388889/View
 * 
 */
public class Division {
    /**
     *  Takes two ints and divides them
     * @param x numerator 
     * @param y denominator
     * @return int result of division
     */
    public int divide (int x, int y){
        return x / y;
    }
}