j--/tests/fail/Division.java
package fail;

/**
 * This class was made during: Lecture 1
 * 
 * @see https://learn.inside.dtu.dk/d2l/le/content/103833/viewContent/388889/View
 * 
 */
public class Division {
    
    public static void main(String[] args) {
        System.out.println('a' / 42);
    }
}
